# Nonlinear_MPCC_ROS2

./: README.MD
nonlinear_mpc_casadi/: CMakeLists.txt  package.xml
nonlinear_mpc_casadi/launch/: mpcc_f110_car.launch.py  mpcc_f110_simulator.launch.py  mpcc_fssim.launch.py
nonlinear_mpc_casadi/params/: mpcc_params.yaml  mpcc_params_f1tenth_gym.yaml  mpcc_params_fssim.yaml
nonlinear_mpc_casadi/scripts/: Nonlinear_MPC.py  Nonlinear_MPC_node.py
