<?xml version="1.0"?>
<package format="3">
  <name>nonlinear_mpc_casadi</name>
  <version>0.0.0</version>
  <description>Nonlinear MPCC for F1/10 using CasADi (ROS2/rclpy).</description>

  <maintainer email="houssam@todo.todo">houssam</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>python3-scipy</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
